--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* GENERAL */
+
 * {
   margin: 0;
   padding: 0;
@@ -7,3 +9,17 @@
 .debug {
   border: 1px solid black;
 }
+.wrapper {
+  width: 100%;
+  height: 100vh;
+}
+
+/* FLEX */
+
+/* BODY */
+
+/* LEFT SIDE  */
+
+/* RIGHT SIDE */
+
+/* FOOTER PLAYBAR */
