--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,45 @@
 }
 
 /* FLEX */
+.d-flex {
+  display: flex;
+}
 
 /* BODY */
+#main-section {
+  display: flex;
+}
 
 /* LEFT SIDE  */
+#left-side {
+  width: 250px;
+  height: calc(100vh - 90px);
+}
+#left-side header {
+  height: 90px;
+}
+#left-side main {
+  height: calc(100% - 90px);
+}
 
 /* RIGHT SIDE */
+#right-side {
+  width: calc(100% - 250px);
+}
+#right-side header {
+  position: fixed;
+  right: 0;
+  width: calc(100% - 250px);
+  height: 90px;
+}
+#right-side nav {
+  margin-top: 90px;
+}
 
 /* FOOTER PLAYBAR */
+#playbar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 90px;
+}
