--- a/css/style.css
+++ b/css/style.css
@@ -6,48 +6,99 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
-.debug {
-  border: 1px solid black;
+:root {
+  --color-dark: #141922;
+  --color-dark-grey: #282828;
+  --color-black: #000000;
+  --color-white: #ffffff;
+  --color-grey: #a3a3a3;
+  --color-light-grey: #c1c1c1;
+  --color-highlight: #adff2f;
 }
 .wrapper {
   width: 100%;
   height: 100vh;
 }
-
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+img {
+  width: 100%;
+  display: block;
+}
 /* FLEX */
 .d-flex {
   display: flex;
+}
+.vertical-align {
+  align-items: center;
+}
+.gap10 {
+  gap: 10px;
 }
 
 /* BODY */
 #main-section {
   display: flex;
+  align-items: stretch;
 }
 
 /* LEFT SIDE  */
 #left-side {
-  width: 250px;
+  width: 350px;
   height: calc(100vh - 90px);
+  padding: 20px;
+  background-color: var(--color-black);
+  font-weight: 600;
+  color: white;
 }
 #left-side header {
   height: 90px;
 }
-#left-side main {
-  height: calc(100% - 90px);
+
+/* LEFT SIDE HEADER */
+.logo {
+  width: 80%;
+}
+
+/* LEFT SIDE MAIN */
+.icons {
+  width: 10%;
+}
+.navbar-left {
+  padding-bottom: 15px;
+}
+.navbar-left li {
+  padding: 5px 0;
+}
+.playlist li {
+  padding: 10px 0;
+}
+#add-playlist {
+  font-size: 2.8em;
+  color: white;
 }
 
 /* RIGHT SIDE */
 #right-side {
-  width: calc(100% - 250px);
+  width: calc(100% - 350px);
+  height: calc(100vh - 90px);
+  padding: 10px;
+  overflow-y: auto;
 }
 #right-side header {
   position: fixed;
   right: 0;
-  width: calc(100% - 250px);
+  width: calc(100% - 350px);
   height: 90px;
+  z-index: 999;
 }
-#right-side nav {
+#right-side section {
   margin-top: 90px;
+  height: calc(100% - 90px);
 }
 
 /* FOOTER PLAYBAR */
@@ -56,4 +107,8 @@
   bottom: 0;
   width: 100%;
   height: 90px;
+  z-index: 1000;
+  background-color: white;
 }
+
+/* MEDIA QUERY */
