--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 :root {
   --color-dark: #141922;
-  --color-dark-2: #080b12;
+  --color-dark-2: #282828;
   --color-black: #000000;
   --color-white: #ffffff;
   --color-grey: #a3a3a3;
@@ -94,6 +94,9 @@ img {
   color: white;
   position: relative;
 }
+#left-side a {
+  color: var(--color-light-grey);
+}
 #left-side header {
   height: 90px;
 }
@@ -157,7 +160,7 @@ img {
   width: calc(100% - 350px);
   height: 90px;
   z-index: 999;
-  background-color: rgba(8, 11, 18, 0.938);
+  background-color: rgba(8, 11, 18, 0.95);
 }
 #main-body {
   margin-top: 90px;
@@ -201,7 +204,8 @@ p {
   width: 100%;
   height: 90px;
   z-index: 1000;
-  background-color: white;
+  background-color: var(--color-dark-2);
+  color: var(--color-white);
 }
 
 /* MEDIA QUERY */
