--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ img {
 .d-flex {
   display: flex;
 }
+.wrap {
+  flex-wrap: wrap;
+}
 .column {
   flex-direction: column;
 }
@@ -78,6 +81,9 @@ img {
 }
 .sp-between {
   justify-content: space-between;
+}
+.sp-around {
+  justify-content: space-around;
 }
 .sp-evenly {
   justify-content: space-evenly;
@@ -186,9 +192,23 @@ img {
 
 /* RIGHT SIDE NAVBAR */
 .navbar-right {
-  padding: 30px;
+  width: 1000px;
+  margin: 0 auto;
 }
-
+.navbar-right li {
+  padding-bottom: 5px;
+  text-align: center;
+  position: relative;
+}
+.navbar-right div {
+  position: absolute;
+  height: 100%;
+  width: 30px;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  border-bottom: 3px solid var(--color-highlight);
+}
 /* RIGHT SIDE RECENTLY PLAYED */
 .card {
   width: calc(100% / 6);
@@ -266,3 +286,18 @@ input {
 }
 
 /* MEDIA QUERY */
+@media screen and (max-width: 576px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 1366px) {
+  .navbar-right {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  .navbar-right ul {
+    flex-wrap: wrap;
+  }
+}
