--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,13 @@ img {
   height: calc(100vh - 90px);
   overflow-y: auto;
 }
+
+#main-body {
+  margin-top: 90px;
+  height: calc(100% - 90px);
+}
+
+/* RIGHT SIDE HEADER */
 #right-side header {
   position: fixed;
   right: 0;
@@ -178,12 +185,6 @@ img {
   z-index: 999;
   background-color: rgba(8, 11, 18, 0.95);
 }
-#main-body {
-  margin-top: 90px;
-  height: calc(100% - 90px);
-}
-
-/* RIGHT SIDE HEADER */
 
 /* RIGHT SIDE MAIN  */
 #right-side section {
@@ -212,11 +213,15 @@ img {
 /* RIGHT SIDE RECENTLY PLAYED */
 .card {
   width: calc(100% / 6);
-  padding: 40px 0;
+  padding: 10px;
 }
 .card div h3,
 p {
   line-height: 1.5;
+}
+.undercard {
+  width: 100%;
+  font-size: 0.8em;
 }
 .subtitle {
   color: var(--color-light-grey);
@@ -286,18 +291,51 @@ input {
 }
 
 /* MEDIA QUERY */
-@media screen and (max-width: 576px) {
-}
-
-@media screen and (max-width: 1024px) {
-}
-
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1440px) {
   .navbar-right {
     max-width: 100%;
     margin: 0 auto;
   }
   .navbar-right ul {
     flex-wrap: wrap;
+    padding: 0 5px 0 5px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .card {
+    width: calc(100% / 4);
+  }
+  .recently-played {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 768px) {
+  .card {
+    width: calc(100% / 2);
+  }
+  .recently-played {
+    flex-wrap: wrap;
+  }
+  .playbar-right input {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #left-side {
+    display: none;
+  }
+  #right-side {
+    width: calc(100%);
+    height: calc(100vh - 90px);
+  }
+  #right-side header {
+    position: fixed;
+    right: 0;
+    width: calc(100%);
+    height: 90px;
+    z-index: 999;
+    background-color: rgba(8, 11, 18, 0.95);
   }
 }
