--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,11 @@ img {
   background-color: var(--color-black);
   color: white;
   display: none;
+  padding: 15px;
 }
 .laterl-bar-plus {
-  width: 30px;
+  width: 40px;
+  padding: 3px 0;
 }
 
 /* LEFT SIDE HEADER */
@@ -370,6 +372,15 @@ input {
   }
   #left-side-plus {
     display: block;
+  }
+  #left-side-plus {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .download {
+    padding: 30px 0;
   }
 }
 @media screen and (max-width: 425px) {
